El programa ya agrega, edita y muestra los usuarios de una manera mas eficiente

--- a/Prac3/Prac3/Prac3.csproj
+++ b/Prac3/Prac3/Prac3.csproj
@@ -36,8 +36,8 @@
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="AssemblyInfo.cs" />
-    <Compile Include="Tabla.cs" />
     <Compile Include="Funciones.cs" />
+    <Compile Include="Persona.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
